--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -951,5 +951,7 @@ bench:
     paths:
       - _bench/html/**/*.v.html
       - _bench/logs
+      - _bench/opam.NEW
+      - _bench/opam.OLD
     when: always
     expire_in: 1 year
